--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="visible-xs"><a href="#">Chicken</a></li>
-            <li class="visible-xs"><a href="#">Beef</a></li>
-            <li class="visible-xs"><a href="#">Sushi</a></li>
+            <li class="visible-xs"><a href="#" class="menu-item">Chicken</a></li>
+            <li class="visible-xs"><a href="#" class="menu-item">Beef</a></li>
+            <li class="visible-xs"><a href="#" class="menu-item">Sushi</a></li>
           </ul>
         </div>
       </div>
